[package]
name = "luarunny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
rlua = "0.19.2"
anyhow = "1.0.57"
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
]

[patch.crates-io]
#winit = { path = "../winit" }
winit = { git = "https://github.com/cursey/winit.git", rev = "6edb7330ceeef5f9f863ebce47bf988f79c9b756" }
