[package]
name = "luarunny"
authors = ["cursey"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
anyhow = "1.0.57"
lazy_static = "1.4.0"

[dependencies.mlua]
version = "0.8.3"
features = ["lua54", "send"]

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
]

[patch.crates-io]
#winit = { path = "../winit" }
winit = { git = "https://github.com/cursey/winit.git", rev = "6edb7330ceeef5f9f863ebce47bf988f79c9b756" }
